@@ -277,11 +277,7 @@ void GuiShareLocal::dropEvent( QDropEvent *event )
   {
     foreach( QUrl url, event->mimeData()->urls() )
     {
-#if QT_VERSION >= 0x040800
-      if( url.isLocalFile() )
-#else
-      if( url.scheme() == QLatin1String( "file" ) )
-#endif
+      if( Bee::isLocalFile( url ) )
         addSharePath( url.toLocalFile() );
     }
   }
